# store

./: README.md  docker-compose.yml
.github/workflows/: cicd_workflow.yml
book_store/: docker-compose.yml
book_store/book_store_backend/: Dockerfile  readme.md
book_store/book_store_backend/conf/: logging.yml
book_store/book_store_backend/script/: main.sh
book_store/book_store_backend/src/: context.py  database.py  router.py
book_store/book_store_backend/src/common/exception/: system_exception.py
book_store/book_store_backend/src/common/interceptor/: service_interceptor.py
book_store/book_store_backend/src/common/util/: formatter.py
book_store/book_store_backend/src/domain/model/: book.py
book_store/book_store_backend/src/domain/service/: book_service.py  conversation_service.py
book_store/book_store_backend/src/infra/repository/: book_repository.py  conversation_repository.py
book_store/book_store_frontend/: package-lock.json  readme.md
book_store/book_store_frontend/src/: index.html
book_store/jenkins/: Dockerfile
book_store_backend/: extensions.json  launch.json  pylintrc  pyproject.toml  pytest-cov.ini  readme.md  settings.json
book_store_backend/src/: api.py  app.py  context.py  router.py  setting.py
book_store_backend/src/common/exception/: app_exception.py
book_store_backend/src/common/util/: type_converter.py
book_store_backend/src/domain/model/: conversation.py
book_store_backend/src/domain/service/: conversation_service.py
book_store_backend/src/infra/table/: book_table.py
book_store_backend/src/web/schema/: book_mutation_schema.py  book_query_schema.py  book_schema.py  chat_mutation_schema.py
book_store_backend/src/web/type/: book_type.py
book_store_frontend/: angular.json
book_store_frontend/src/app/: app.component.ts  settings.ts
book_store_frontend/src/app/book-detail/: book-detail.component.ts
mm-id-detector/: .gitignore  README.md  pyproject.toml
mm-id-detector/mmid/: db.sqlite3  manage.py
mm-id-detector/mmid/mmid/: asgi.py  settings.py  urls.py  wsgi.py
mm-id-detector/mmid/photodetector/: admin.py  apps.py  models.py
qrcode-generator/: README.md  db.sqlite3  docker-compose.yml  pyproject.toml
qrcode-generator/src/: settings.py  urls.py
qrcode-generator/src/qrcode/: urls.py  views.py
qrcode-generator/src/user/: views.py
spendsmart/: README.md  docker-compose.yml  pom.xml
spendsmart/db/: db_init.sql
spendsmart/src/main/resources/: application.properties  log-messages.properties  messages.properties  messages_mm.properties
url-shortener/: README.md  docker-compose.yml
url-shortener/server/: Dockerfile  README.md  pyproject.toml
url-shortener/server/.github/workflows/: cicd_workflow.yml
url-shortener/server/conf/: .env  .flake8  .pylintrc  logging.yml
url-shortener/server/src/: app.py  context.py  database.py  router.py  setting.py
url-shortener/server/src/api/: api.py
url-shortener/server/src/api/schema/: history_query_schema.py  url_redirect_endpoint.py  url_shorten_mutation_schema.py
url-shortener/server/src/api/type/: history_type.py  url_type.py
url-shortener/server/src/common/interceptor/: service_interceptor.py
url-shortener/server/src/common/util/: formatter.py
url-shortener/server/src/domain/model/: url.py
url-shortener/server/src/domain/service/: url_service.py
url-shortener/server/src/exception/: app_exception.py
url-shortener/server/src/infra/repository/: url_repository.py
url-shortener/server/src/infra/table/: type.py  url_table.py
url-shortener/server/test/: conf_test.py  test_url_shorten_mutation_schema.py
url-shortener/server/test/api/: test_url_shorten_mutation_schema.py
(+37 files in other folders)
