[tool.poetry]
name = "url-shortener-server"
version = "0.1.0"
description = ""
authors = ["thinpyai <thinpyaiwin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.0"
uvicorn = {extras = ["standard"], version = "0.17.6"}
SQLAlchemy-Utils = "0.38.2"
alembic = "1.7.7"
strawberry-graphql = {extras = ["fastapi"], version = "0.109.1"}
requests = "2.27.1"
httpx = "^0.25.0"
pydantic-settings = "^2.0.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
autopep8 = "^2.0.4"
pylint = "^3.0.3"
pytest = "^7.4.4"
pytest-mock = "^3.12.0"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
coverage = "^7.4.0"
freezegun = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
